# ConwaysGameOfLife

./: .gitignore  README.md  pyproject.toml
src/custom_patterns/: pattern_1.txt  pattern_2.txt
src/game_of_life/: file_loader.py  game.py  game_controller.py  game_runner.py  pattern_generator.py  renderer.py
tests/: test_game.py
