[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "conways-game-of-life"
version = "0.1.0"
authors = [{ name = "Marcel Früholz" }]
dependencies = [
    "pynput",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[project.scripts]
game-of-life = "game_of_life.game_runner:main"

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = ["tests"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]